tests/show-variable.stderr
error: 
   ┌─ test:4:1
   │
 4 │ show my-variable
   │ ^^^^ cannot display `my-variable` on the screen
   │
   ┌─ <dir>/std/io.wpl:25:17
   │
25 │ show :: A where (Show A) => A -> ()
   │                 -------- required by this bound here
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

